--- a/themes/dennehy/style.css
+++ b/themes/dennehy/style.css
@@ -25,7 +25,20 @@ width: 220px;
 #primary-menu {
 background: #532750;
 }
-/********** Navigation **************/
+/********** home **************/
+.home .page-area .wrapper {
+	width: auto;
+	height: auto;
+	margin: 2px auto 0;
+	background-color: #50314E;
+	padding: 5px 0 0;
+}
+.home .page-area .wrapper h1 {
+	color: #fff;
+}
+.home .page-area .wrapper h1 strong {
+	font-weight: normal;
+}
 /********** Navigation **************/
 /********** Navigation **************/
 
