Test change in header

--- a/themes/dennehy/style.css
+++ b/themes/dennehy/style.css
@@ -1,7 +1,7 @@
 /*
 Theme Name: dennehy
 Theme URI: http://loudfeed.tv/
-Description: One Page Theme, child of Simplekey
+Description: One Page Theme for Dennehy Law Firm, child of Simplekey
 Version: 1.0
 Author: Margarete Koenen
 Author URI: http://loudfeed.tv
