--- a/themes/dennehy/style.css
+++ b/themes/dennehy/style.css
@@ -28,26 +28,16 @@ background: #532750;
 }
 
 /********** home **************/
-.home .page-area .wrapper{
-	width: auto;
-	height: auto;
+#our-firm {
+background: #F5F3F4;
 }
-.home .page-area .wrapper .title{
-	width: auto;
-	height: auto;
-	margin: 2px auto 0;
-	background-color: #50314E;
-	padding: 5px 0 0;
-}
+
 .home .page-area .wrapper .entry {
 	max-width: 980px;
 	width: 60%;
 	height: auto;
 	margin: 0 auto;
 	padding: 30px 20% 0;
-}
-.home .page-area .wrapper h1 {
-	color: #fff;
 }
 .home .page-area .wrapper h1 strong {
 	font-weight: normal;
